# my-first-repo

./: Dockerfile  README.md  commands.sh  docker-compose.yaml  faker_data.py  manage.py  poetry.toml  proposal.md  pyproject.toml
doubancopy/: asgi.py  settings.py  urls.py  wsgi.py
search/: admin.py  models.py  views.py
search/migrations/: 0001_initial.py
search/templates/: home.html  search_results.html
