[tool.poetry]
name = "douban-search"
version = "0.1.0"
description = "This is a douban movie search web project"
authors = ["SheltonZSL <1878858428@qq.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "douban_search"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
faker = "^15.3.3"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
